[tool.poetry]
name = "pafy"
version = "1.0.0"
description = ""
authors = ["Alejandro Aguayo-Ortiz <aaguayoo92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<3.13"
yt-dlp = "2023.12.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
